--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "converhwind"
+name = "hwind2geojson"
 version = "0.1.0"
 description = "A Python tool for converting HWIND radar data to GeoJSON format"
 readme = "README.md"
@@ -28,16 +28,16 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/converhwind"
-Repository = "https://github.com/yourusername/converhwind.git"
-"Bug Tracker" = "https://github.com/yourusername/converhwind/issues"
+Homepage = "https://github.com/yourusername/hwind2geojson"
+Repository = "https://github.com/yourusername/hwind2geojson.git"
+"Bug Tracker" = "https://github.com/yourusername/hwind2geojson/issues"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/converhwind"]
+packages = ["src/hwind2geojson"]
 
 [tool.ruff]
 line-length = 100
